# ai-agent-upgrade

./: .gitignore  .graphify_uncached.txt  .iflowignore  AGENTS.md  README.md  main.py  prompt-learning-benchmark-report.md  pyproject.toml
.benchmark/: benchmark.json  eval-review.md  review.html
.benchmark/eval-0/: eval_metadata.json
.codex/skills/: github-stars  (+21 more)
.iflow/: settings.json
.opencode/: opencode.json
docs/: ai-agent-architecture.md  ai-coding-model-planning.md  deepagent-learning-plan.md  ironforge-naming.md  learning-plan.md  opencode-go-guide.md  prompt-engineering-history.md  prompt-learning-benchmark-report.md
exam-result/: 2026-03-13-prompt-learning-report.md  2026-03-16-prompt-learning-report.md  2026-04-07-prompt-learning-report.md
graphify-out/: .graphify_detect.json  .graphify_python  GRAPH_REPORT.md  cost.json  manifest.json
notebook/: 00-prompt-techniques-overview.md  01-zero-shot-prompting.md  02-few-shot-prompting.md  03-chain-of-thought-prompting.md  04-self-consistency.md  05-tree-of-thought.md  06-knowledge-prompting.md  07-retrieval-augmented-generation.md  08-prompt-chaining.md  09-react-reason-act.md  10-program-aided-language-models.md  11-automatic-reasoning-and-tool-use.md  12-automatic-prompt-engineer.md  13-active-prompt.md  14-directional-stimulus-prompting.md  15-reflexion.md  16-multimodal-cot.md  17-graph-prompt.md  17-graph-prompts.md
prompt-learning-workspace/: evals.json
tests/: test_rag_learning_config_units.py  test_rag_learning_content_quality.py  test_rag_learning_platform.py  test_rag_learning_state_flow.py
(+395 files in other folders)
